compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test11.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type Point { Point(x: Int, y: Int) }\npub fn x() { Point(x: 4, y: 6) Point(y: 1, x: 9) }"
---
----- SOURCE CODE
pub type Point { Point(x: Int, y: Int) }
pub fn x() { Point(x: 4, y: 6) Point(y: 1, x: 9) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).
-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-file("project/test/my/mod.gleam", 2).
-spec x() -> point().
x() ->
    {point, 4, 6},
{point, 9, 1}.
