compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test16.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "fn go(x xx, y yy) { xx }\npub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }"
---
----- SOURCE CODE
fn go(x xx, y yy) { xx }
pub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).

-file("project/test/my/mod.gleam", 1).
-spec go(I, any()) -> I.
go(Xx, Yy) ->
    Xx.

-file("project/test/my/mod.gleam", 2).
-spec x() -> integer().
x() ->
    go(1, 2),
go(4, 3).
