compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test18.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn run() { case 1, 2 { a, b -> a } }"
---
----- SOURCE CODE
pub fn run() { case 1, 2 { a, b -> a } }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([run/0]).

-file("project/test/my/mod.gleam", 1).
-spec run() -> integer().
run() ->
    case {1, 2} of
    {A, B} ->
        A
end.
