compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test19.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type X { X(x: Int, y: Float) }\npub fn x() { X(x: 1, y: 2.) X(y: 3., x: 4) }"
---
----- SOURCE CODE
pub type X { X(x: Int, y: Float) }
pub fn x() { X(x: 1, y: 2.) X(y: 3., x: 4) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).
-export_type([x/0]).

-type x() :: {x, integer(), float()}.

-file("project/test/my/mod.gleam", 2).
-spec x() -> x().
x() ->
    {x, 1, 2.0},
{x, 4, 3.0}.
