compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1_5.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "fn add(x, y) { x + y }\n                    pub fn go() { 1 |> add(_, 1) |> add(2, _) |> add(_, 3) }"
---
----- SOURCE CODE
fn add(x, y) { x + y }
                    pub fn go() { 1 |> add(_, 1) |> add(2, _) |> add(_, 3) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec add(integer(), integer()) -> integer().
add(X, Y) ->
    X + Y.

-file("project/test/my/mod.gleam", 2).
-spec go() -> integer().
go() ->
    _pipe = 1,
_pipe@1 = add(_pipe, 1),
_pipe@2 = add(2, _pipe@1),
add(_pipe@2, 3).
